PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/NoWindowDefinedNoObjectDefined.nova
the textbox value is wow.